--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="nikovanhala.github.io/Pages/Co-Living_Quarters" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="nikovanhala.github.io/Pages/Co-Living_Quarters.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Co-Living Quarters</h4>
               </div>
@@ -214,7 +214,7 @@
         <div class="about-text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
-          <a href="pages/cv" class="btn btn-default btn-lg page-scroll">CV</a>
+          <a href="nikovanhala.github.io/pages/cv" class="btn btn-default btn-lg page-scroll">CV</a>
           <a href="#portfolio" class="btn btn-default btn-lg page-scroll">My Projects</a> </div>
       </div>
     </div>
