--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
               <div class="hover-text">
                 <h4>Välkkylä</h4>
               </div>
-              <img src="img/portfolio/välkkylä small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="nikovanhala.github.io/img/portfolio/välkkylä small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Co-Living Quarters.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="nikovanhala.github.io/Pages/Co-Living Quarters.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Co-Living Quarters</h4>
               </div>
-              <img src="img/portfolio/CO-LIVING QUARTERS small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="nikovanhala.github.io/img/portfolio/CO-LIVING QUARTERS small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
@@ -114,7 +114,7 @@
               <div class="hover-text">
                 <h4>Verso</h4>
               </div>
-              <img src="img/portfolio/verso small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="nikovanhala.github.io/img/portfolio/verso small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
@@ -132,7 +132,7 @@
               <div class="hover-text">
                 <h4>Waatto</h4>
               </div>
-              <img src="img/portfolio/Waatto small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="nikovanhala.github.io/img/portfolio/Waatto small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 photography">
@@ -141,7 +141,7 @@
               <div class="hover-text">
                 <h4>Two Mills</h4>
               </div>
-              <img src="img/portfolio/two mills small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="nikovanhala.github.io/img/portfolio/two mills small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
@@ -150,7 +150,7 @@
               <div class="hover-text">
                 <h4>Nokia Linnanmaa</h4>
               </div>
-              <img src="img/portfolio/nokia small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="nikovanhala.github.io/img/portfolio/nokia small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 illustration">
@@ -159,7 +159,7 @@
               <div class="hover-text">
                 <h4>Christmas card</h4>
               </div>
-              <img src="img/portfolio/oulun arkkitehtikilta joulukortti small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="nikovanhala.github.io/img/portfolio/oulun arkkitehtikilta joulukortti small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
@@ -168,7 +168,7 @@
               <div class="hover-text">
                 <h4>Pala</h4>
               </div>
-              <img src="img/portfolio/pala small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="nikovanhala.github.io/img/portfolio/pala small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 photography">
@@ -177,7 +177,7 @@
               <div class="hover-text">
                 <h4>Blender stuff</h4>
               </div>
-              <img src="img/portfolio/blender stuff small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="nikovanhala.github.io/img/portfolio/blender stuff small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 photography">
