--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Co-Living Quarters.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="nikovanhala.github.io/Pages/Co-Living Quarters.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Välkkylä</h4>
               </div>
