--- a/Pages/Co-Living Quarters.html
+++ b/Pages/Co-Living Quarters.html
@@ -222,7 +222,7 @@
             <!-- <div id="page-wrap"> -->
 
             <div class="image-stack__item-1">
-                <a href="img/CO-LIVING QUARTERS 1.jpg">
+                <a href="./img/CO-LIVING QUARTERS 1.jpg">
                     <img src="IMG/CO-LIVING QUARTERS 1.jpg" ; width="100%">
                 </a>
             </div>
