--- a/Pages/Co-Living Quarters.html
+++ b/Pages/Co-Living Quarters.html
@@ -222,8 +222,8 @@
             <!-- <div id="page-wrap"> -->
 
             <div class="image-stack__item-1">
-                <a href="../img/CO-LIVING QUARTERS 1.jpg">
-                    <img src="IMG/CO-LIVING QUARTERS 1.jpg" ; width="100%">
+                <a href="/img/CO-LIVING QUARTERS 1.jpg">
+                    <img src="img/CO-LIVING QUARTERS 1.jpg" ; width="100%">
                 </a>
             </div>
 
@@ -253,7 +253,7 @@
             </div>
 
             <div class="image-stack__item-5B">
-                <a href="../img/CO-LIVING QUARTERS 2.jpg">
+                <a href="/img/CO-LIVING QUARTERS 2.jpg">
                     <img src="img/CO-LIVING QUARTERS 2.jpg" ; width="100%">
                 </a>
             </div>
@@ -265,19 +265,19 @@
             </div>
 
             <div class="image-stack__item-6">
-                <a href="../img/CO-LIVING QUARTERS 4.jpg">
+                <a href="/img/CO-LIVING QUARTERS 4.jpg">
                     <img src="img/CO-LIVING QUARTERS 4.jpg" ; width="100%">
                 </a>
             </div>
 
             <div class="image-stack__item-8">
-                <a href="../img/CO-LIVING QUARTERS 5.jpg">
+                <a href="/img/CO-LIVING QUARTERS 5.jpg">
                     <img src="img/CO-LIVING QUARTERS 5.jpg" ; width="100%">
                 </a>
             </div>
 
             <div class="image-stack__item-9">
-                <a href="../img/CO-LIVING QUARTERS 6.jpg">
+                <a href="/img/CO-LIVING QUARTERS 6.jpg">
                     <img src="img/CO-LIVING QUARTERS 6.jpg" ; width="100%">
                 </a>
             </div>
