--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="NIKO VANHALA"/>
+<meta property="og:image" content="nikovanhala.github.io/img/link-img"/>
+<meta property="og:description" content="Niko Vanhala - Portfolio"/>
+<meta property="og:url" content="nikovanhala.github.io"/>
+<meta property='og:image:width' content="1000" />
+<meta property='og:image:height' content="1000" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>NIKO VANHALA</title>
