--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta property="og:title" content="NIKO VANHALA"/>
-<meta property="og:image" content="nikovanhala.github.io/img/link-img"/>
+<meta property="og:image" content="nikovanhala.github.io/img/link-img.jpg"/>
 <meta property="og:description" content="Niko Vanhala - Portfolio"/>
 <meta property="og:url" content="nikovanhala.github.io"/>
 <meta property='og:image:width' content="1000" />
