--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Välkkylä.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Välkkylä.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Välkkylä</h4>
               </div>
@@ -103,7 +103,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Co-Living Quarters.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Co-Living Quarters.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Co-Living Quarters</h4>
               </div>
@@ -112,7 +112,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Verso.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Verso.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Verso</h4>
               </div>
@@ -121,7 +121,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Stairs.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Stairs.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Stairs</h4>
               </div>
@@ -130,7 +130,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 illustration">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Waatto.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Waatto.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Waatto</h4>
               </div>
@@ -139,7 +139,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 photography">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/TwoMills.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/TwoMills.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Two Mills</h4>
               </div>
@@ -148,7 +148,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Diagonal.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Diagonal.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Diagonal</h4>
               </div>
@@ -157,7 +157,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 illustration">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Christmas card.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Christmas card.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Christmas card</h4>
               </div>
@@ -166,7 +166,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Pala.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Pala.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Pala</h4>
               </div>
@@ -175,7 +175,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 photography">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Blender stuff.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Blender stuff.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Blender stuff</h4>
               </div>
@@ -184,7 +184,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Blender stuff.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Blender stuff.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>KOSU</h4>
               </div>
@@ -193,7 +193,7 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 graphic">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="pages/Blender stuff.html" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="Pages/Blender stuff.html" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Observatory</h4>
               </div>
