--- a/Pages/Diagonal.html
+++ b/Pages/Diagonal.html
@@ -223,7 +223,7 @@
 
             <div class="image-stack__item-1">
                 <a href="img/Diagonal 1.jpg">
-                    <img src="IMG/Diagonal 1.jpg" ; width="100%">
+                    <img src="img/Diagonal 1.jpg" ; width="100%">
                 </a>
             </div>
 
