--- a/Pages/Co-Living Quarters.html
+++ b/Pages/Co-Living Quarters.html
@@ -15,7 +15,7 @@
         }
 
         #page-wrap {
-            width: 950px;
+            width: 1150px;
             margin: 40px auto 60px;
         }
 
@@ -42,7 +42,7 @@
             margin: 0 0 16px 0;
             color: #777;
             line-height: 120%;
-            font-size: 1vw;
+            font-size: 0.8vw;
         }
 
         a {
@@ -201,7 +201,7 @@
             padding: 0px 0px;
             width: 100%;
             margin: 0 auto;
-            max-width: 75%;
+            max-width: 60%;
         }
 
         #container {
@@ -223,7 +223,7 @@
 
             <div class="image-stack__item-1">
                 <a href="img/CO-LIVING QUARTERS 1.jpg">
-                    <img src="img/CO-LIVING QUARTERS 1.jpg" ; width="100%">
+                    <img src="IMG/CO-LIVING QUARTERS 1.jpg" ; width="100%">
                 </a>
             </div>
 
