--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 <!-- Header -->
@@ -217,7 +218,7 @@
         <div class="about-text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
-          <a href="pages/CV.html" class="btn btn-default btn-lg page-scroll">CV</a>
+          <a href="Pages/CV.html" class="btn btn-default btn-lg page-scroll">CV</a>
           <a href="#portfolio" class="btn btn-default btn-lg page-scroll">My Projects</a> </div>
       </div>
     </div>
