--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="intro-text">
           <h1>NIKO <br>VANHALA</h1>
-          <h6>Architecture student potfolio</h6>
+          <h6>Architecture student portfolio</h6>
       </div>
     </div>
   </div>
