--- a/Pages/Co-Living Quarters.html
+++ b/Pages/Co-Living Quarters.html
@@ -223,7 +223,7 @@
 
             <div class="image-stack__item-1">
                 <a href="img/CO-LIVING QUARTERS 1.jpg">
-                    <img src="IMG/CO-LIVING QUARTERS 1.jpg" ; width="100%">
+                    <img src="img/CO-LIVING QUARTERS 1.jpg" ; width="100%">
                 </a>
             </div>
 
