--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>NIKO VANHALA</title>
-<meta name="description" content="">
-<meta name="author" content="">
+<link rel="icon" type="image/png" href="img/NN.jpg">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- Favicons
     ================================================== -->
@@ -44,8 +43,7 @@
     <div class="container">
       <div class="row">
         <div class="intro-text">
-          <h1>NIKO <br>VANHALA</h1>
-          <h6>Architecture student portfolio</h6>
+          <h1 span style="float: left;">NIKO<br>VANHALA</span></h1><h6 span style="text-align: right;" style="float: right;">Architecture<br>student<br>portfolio</span></h6>
       </div>
     </div>
   </div>
@@ -218,7 +216,7 @@
         <div class="about-text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
-          <a href="Pages/CV.html" class="btn btn-default btn-lg page-scroll">CV</a>
+          <!--<a href="Pages/CV.html" class="btn btn-default btn-lg page-scroll">CV</a>-->
           <a href="#portfolio" class="btn btn-default btn-lg page-scroll">My Projects</a> </div>
       </div>
     </div>
