--- a/Pages/Waatto.html
+++ b/Pages/Waatto.html
@@ -9,23 +9,21 @@
 
 <body>
     <div class="container">
-            <div class="top">
-                <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
-                        src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
-                        id="btn" style="position: relative; top: 14px;">BACK</a></span>
-            </div>
+        <div class="top">
+            <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
+                    src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
+                    id="btn" style="position: relative; top: 14px;">BACK</a></span>
+        </div>
         <div class="content-grid">
             <img class="cg_item-1a" src="img/Waatto 1.jpg" alt="Image missing">
             <div class="cg_item-2">
                 <h1>Wappu posters 2020</h1>
                 <p>
                     30.4.2020
-                    <br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fuga, sapiente quos,
-                    laudantium hic sequi aut accusantium at autem placeat commodi error illum aliquid libero natus
-                    quibusdam voluptas sint nemo.
-                    <br> <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt minus esse quia quo
-                    autem quae impedit rem sit cupiditate dignissimos saepe dolorum pariatur voluptatem, amet
-                    voluptas aspernatur nemo magnam cumque.
+                    <br> <br>Blender, Photoshop
+                    <br> <br>Two poster designs I made for 2020 Oulu's Teekkariwappu's main events: "Waaton aatto" and
+                    "Waatto". The Wappu theme that year was "vikings". Unfortunately all the event's were later
+                    cancelled due to covid. The posters were later renamed and used for another occasion.
                 </p>
                 <br><br>
                 <img class="cg_item-1b" src="img/Waatto 2.jpg" alt="Image missing">
