--- a/Pages/Verso.html
+++ b/Pages/Verso.html
@@ -9,23 +9,25 @@
 
 <body>
     <div class="container">
-            <div class="top">
-                <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
-                        src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
-                        id="btn" style="position: relative; top: 14px;">BACK</a></span>
-            </div>
+        <div class="top">
+            <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
+                    src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
+                    id="btn" style="position: relative; top: 14px;">BACK</a></span>
+        </div>
         <div class="content-grid">
             <img class="cg_item-1" src="img/Verso 1.jpg" alt="Image missing">
             <div class="cg_item-2">
                 <h1>Verso</h1>
                 <p>
                     3.12.2021
-                    <br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fuga, sapiente quos,
-                    laudantium hic sequi aut accusantium at autem placeat commodi error illum aliquid libero natus
-                    quibusdam voluptas sint nemo.
-                    <br> <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt minus esse quia quo
-                    autem quae impedit rem sit cupiditate dignissimos saepe dolorum pariatur voluptatem, amet
-                    voluptas aspernatur nemo magnam cumque.
+                    <br><br>Blender, Revit, Photoshop
+                    <br><br>Verso was my entry for Science Center Heureka's student contest for an outdoor meeting and
+                    break place. Verso strives to bring together the humans' structural and the animal kingdom's
+                    haphazard and organic shelter. The wooden structures are laminated timber elements with a clear
+                    protective finish, and the canopy glazing is frosted plexiglass. The free form of the entirety is
+                    easily constructed and can be seamlessly expanded in the future. The weather sheltered area is
+                    sufficent for at least 30 personel.
+                    <br><br>First stage continuation place ( top10 )
                 </p>
             </div>
             <img class="cg_item-3" src="img/Verso 2.jpg" alt="Image missing">
