--- a/Pages/TwoMills.html
+++ b/Pages/TwoMills.html
@@ -20,12 +20,8 @@
                 <h1>Two mills</h1>
                 <p>
                     6.3.2021
-                    <br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fuga, sapiente quos,
-                    laudantium hic sequi aut accusantium at autem placeat commodi error illum aliquid libero natus
-                    quibusdam voluptas sint nemo.
-                    <br> <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt minus esse quia quo
-                    autem quae impedit rem sit cupiditate dignissimos saepe dolorum pariatur voluptatem, amet
-                    voluptas aspernatur nemo magnam cumque.
+                    <br> <br>Blender, Photoshop
+                    <br> <br>As one of my Blender modelling practices I modelled a traditional Finnish timber windmill. 
                 </p>
             </div>
         </div>
