--- a/Pages/Stairs.html
+++ b/Pages/Stairs.html
@@ -9,23 +9,24 @@
 
 <body>
     <div class="container">
-            <div class="top">
-                <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
-                        src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
-                        id="btn" style="position: relative; top: 14px;">BACK</a></span>
-            </div>
+        <div class="top">
+            <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
+                    src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
+                    id="btn" style="position: relative; top: 14px;">BACK</a></span>
+        </div>
         <div class="content-grid">
             <img class="cg_item-1" src="img/stairs 1.jpg" alt="Image missing">
             <div class="cg_item-2">
                 <h1>Stairs</h1>
                 <p>
                     2019 spring
-                    <br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fuga, sapiente quos,
-                    laudantium hic sequi aut accusantium at autem placeat commodi error illum aliquid libero natus
-                    quibusdam voluptas sint nemo.
-                    <br> <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt minus esse quia quo
-                    autem quae impedit rem sit cupiditate dignissimos saepe dolorum pariatur voluptatem, amet
-                    voluptas aspernatur nemo magnam cumque.
+                    <br> <br>Revit, Sketchup, Blender, Photoshop
+                    <br> <br>As our second year architecture design course task we were tasked to design a stairway
+                    connecting two floors of our gallery space, which we had also designed in the previous semester. My
+                    stair design continued the organic theme of the building foorprint using the same materials used in
+                    the whole of the interior. The stairs are not a separate element, but more of an extention within
+                    the interior space, a seamless connection of two levels, emphasizing the flow of possible exhibition
+                    routes.
                 </p>
             </div>
             <img class="cg_item-3" src="img/stairs 2.jpg" alt="Image missing">
