--- a/Pages/Co-Living Quarters.html
+++ b/Pages/Co-Living Quarters.html
@@ -9,23 +9,26 @@
 
 <body>
     <div class="container">
-            <div class="top">
-                <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
-                        src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
-                        id="btn" style="position: relative; top: 14px;">BACK</a></span>
-            </div>
+        <div class="top">
+            <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
+                    src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
+                    id="btn" style="position: relative; top: 14px;">BACK</a></span>
+        </div>
         <div class="content-grid">
             <img class="cg_item-1" src="img/CO-LIVING QUARTERS 1.jpg" alt="Image missing">
             <div class="cg_item-2">
                 <h1>CO-LIVING QUARTERS</h1>
                 <p>
                     8.6.2022
-                    <br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fuga, sapiente quos,
-                    laudantium hic sequi aut accusantium at autem placeat commodi error illum aliquid libero natus
-                    quibusdam voluptas sint nemo.
-                    <br> <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt minus esse quia quo
-                    autem quae impedit rem sit cupiditate dignissimos saepe dolorum pariatur voluptatem, amet
-                    voluptas aspernatur nemo magnam cumque.
+                    <br> <br>Revit, AutoCad, Blender, Photoshop, Illustrator
+                    <br> <br>CO-LIVING QUARTERS was a design entry I did with Kio Oura for Saint-Gobain's architecture
+                    student contest 2022. The task site is located in east Warsaw, not far from Vistula river. The
+                    design proposal offers a diverse and versatile social living environment for students. The old and
+                    appreciated architecture is brought together with the new and innovative through deliberate massing
+                    and choice of materials. Existing spaces have been redesigned and complemented with additional
+                    spaces for public culture activities, creating a public plaza with which the residential buildings
+                    share the plot with. <br><br>
+                    3rd place in national competition
                 </p>
             </div>
             <img class="cg_item-3" src="img/CO-LIVING QUARTERS 3.jpg" alt="Image missing">
