--- a/Pages/Christmas card.html
+++ b/Pages/Christmas card.html
@@ -9,23 +9,20 @@
 
 <body>
     <div class="container">
-            <div class="top">
-                <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
-                        src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
-                        id="btn" style="position: relative; top: 14px;">BACK</a></span>
-            </div>
+        <div class="top">
+            <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
+                    src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
+                    id="btn" style="position: relative; top: 14px;">BACK</a></span>
+        </div>
         <div class="content-grid">
             <img class="cg_item-1" src="img/ARK joulu 1.jpg" alt="Image missing">
             <div class="cg_item-2">
                 <h1>Christmas card</h1>
                 <p>
                     16.12.2020
-                    <br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fuga, sapiente quos,
-                    laudantium hic sequi aut accusantium at autem placeat commodi error illum aliquid libero natus
-                    quibusdam voluptas sint nemo.
-                    <br> <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt minus esse quia quo
-                    autem quae impedit rem sit cupiditate dignissimos saepe dolorum pariatur voluptatem, amet
-                    voluptas aspernatur nemo magnam cumque.
+                    <br> <br>Blender, Photoshop
+                    <br> <br>A Christmas card design done for Oulun Arkkitehtikilta as the guild's graphic designer. The
+                    christmas ornament is modelled fully in blender.
                 </p>
             </div>
         </div>
