--- a/Pages/Diagonal.html
+++ b/Pages/Diagonal.html
@@ -9,23 +9,25 @@
 
 <body>
     <div class="container">
-            <div class="top">
-                <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
-                        src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
-                        id="btn" style="position: relative; top: 14px;">BACK</a></span>
-            </div>
+        <div class="top">
+            <a href="https://nikovanhala.github.io/" class="logo" span style="float: left;"><img class="logo"
+                    src="img/NV.png"></span></a><span style="float: right;"><a href="#" onclick="history.go(-1)"
+                    id="btn" style="position: relative; top: 14px;">BACK</a></span>
+        </div>
         <div class="content-grid">
             <img class="cg_item-1" src="img/Diagonal 1.jpg" alt="Image missing">
             <div class="cg_item-2">
                 <h1>DIAGONAL</h1>
                 <p>
-                    26.2.2021
-                    <br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fuga, sapiente quos,
-                    laudantium hic sequi aut accusantium at autem placeat commodi error illum aliquid libero natus
-                    quibusdam voluptas sint nemo.
-                    <br> <br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt minus esse quia quo
-                    autem quae impedit rem sit cupiditate dignissimos saepe dolorum pariatur voluptatem, amet
-                    voluptas aspernatur nemo magnam cumque.
+                    26.2.2021 <br><br>Revit, AutoCad, Blender, Photohsop
+                    <br> <br>My entry for Nokia's idea competition held for Oulu University architecture sudents in
+                    2021. Diagonal consists of five longitudinal ”logs” spreading across the lot.
+                    There are lower spaces with green roofs for laboratories and -- between
+                    these office tubes. An eight-story Central Hub slices the building,
+                    offering passage and recreational spaces across the facility. The logs are
+                    facing south to maximize sunlight intake, and they leave room for active
+                    courtyards.
+                    <br><br>Honorable mention (4th/5th place)
                 </p>
             </div>
             <img class="cg_item-3" src="img/Diagonal 2.jpg" alt="Image missing">
